# dekspec-public

./: CHANGELOG.md  README.md  adr-template.md  constitution-template.md  implementation-brief-template.md  interface-contract-template.md  lite-constitution-template.md  pyproject.toml  setup.py  system-vision-template.md
.claude-plugin/: marketplace.json
dekspec/: cli.py  cow_state.py  draft_ids.py  git_hooks.py  registry.py  session_lifecycle.py
dekspec/action_handlers/: __init__.py
dekspec/action_handlers/handlers/: testfail.py
dekspec/archeology/: coverage.py
dekspec/audit/: failure_classes.py  loop.py
dekspec/constraint_compiler/: persistence.py  persistence_index.py
dekspec/constraint_compiler/emitters/: agents_md.py  ci_gate.py  ci_gates.py  linked_artifacts.py
dekspec/fidelity_audit/: __init__.py
dekspec/fidelity_audit/profiles/: lite.yaml  v1.yaml
dekspec/ingest/: __init__.py  classifier.py  runner.py
dekspec/mcp/: server.py
dekspec/migrations/: ib_review_statuses.py  intent_beads_before_accept.py  mission.py  mission_markdown.py
dekspec/review/: calibration.py  cli.py  db.py
dekspec/schemas/: __init__.py  adr.schema.yaml  architecture-element.schema.yaml  domain-glossary.schema.yaml  implementation-brief.schema.yaml  registry.schema.yaml  security-profile.schema.yaml  working-spec.schema.yaml
docs/: EXAMPLES.md  amendment-log-types.md  architecture-frameworks-reference.md  architecture.md  cli-reference.md  dekspec-operating-guide.md  dekspec-quick-reference.md
git-hooks/: post-merge.template
plugins/: CONVENTIONS.md
plugins/agents/: adr-author.md  ae-author.md  intent-author.md
plugins/commands/: archeology.md  land-intent.md  migrate.md  orchestrate-intent.md  run-coding-session.md  spec-intent.md  upgrade.md
plugins/dekspec/: CONVENTIONS.md  README.md
plugins/dekspec/.claude-plugin/: plugin.json
plugins/dekspec/agents/: coding-orchestrator.md  ib-author.md  ic-author.md  mission-author.md  ws-author.md
plugins/dekspec/commands/: brownfield-ingest.md  coding-session-forensics.md  compile.md  deepen-until-dry.md  diagnose.md  doctor.md  exec-coding-session.md  forensics.md  goal-loop.md  graph-export.md  interview-me.md  land-intent.md  man.md  migrate.md  orchestrate-coding-session.md  pr-branch.md  prototype.md  rotation-handoff.md  send-issue.md  setup-dekspec.md  spec-intent.md  spike.md  using-dekspec.md  validate-artifact.md  write-goal-loop-contract.md
plugins/dekspec/hooks/: hooks.json
plugins/dekspec/hooks-handlers/: post-edit-audit.py  pretooluse-locked-guard.py  session-end-summary.py  session-start-bootstrap.py
plugins/hooks/: hooks.json
plugins/hooks-handlers/: session-start-bootstrap.py
plugins/scripts/migrate/: advisory_io.py
plugins/skills/_lib/: cli_verbs.md  fan_out.md  help_mode_template.md  lock_unlock.md  mode_dispatcher.md  oversized_splitting.md  review_confidence_rubric.md  teaching_mode.md  vendored_assets.md
plugins/skills/exec-coding-session/: SKILL.md
plugins/skills/review-ib/: SKILL.md  lenses.md
scripts/: install.sh
templates/: architecture-element-template.md  context-spec-template.md  dekspec-config-template.yaml  glossary-template.md  intent-template.md  interface-contract-template.md  lite-intent-template.md  mission-template.md  security-profile-template.md  working-spec-template.md
templates/checklists/: eval-quality-checklist.md  python-quality-checklist.md  security-checklist.md
templates/git-hooks/: destructive-git-guard.py.template  post-merge.template  pre-commit.template  pre-push.template  quality.pre-commit-config.yaml.template
tooling/dekspec/: __init__.py  _build_vendoring.py  api.py  cli.py  deepen_loop.py  dekspec_config.py  dependency_acquisition.py  diff_confinement.py  index_ops.py  mcp_guard.py  platform_install.py  promote.py  provisional_ids.py  rotation_handoff.py  session_lifecycle.py  severity.py  skill_catalog.py  vendoring.py  vibecoding_guard.py
(+200 files in other folders)
